; ModuleID = '/home/carl/AnghaBench/freebsd/sys/amd64/vmm/extr_vmm_dev.c_vcpu_unlock_all.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/amd64/vmm/extr_vmm_dev.c_vcpu_unlock_all.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vmmdev_softc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vmmdev_softc*)* @vcpu_unlock_all to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vcpu_unlock_all(%struct.vmmdev_softc* %0) #0 {
  %2 = alloca %struct.vmmdev_softc*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.vmmdev_softc* %0, %struct.vmmdev_softc** %2, align 8
  %5 = load %struct.vmmdev_softc*, %struct.vmmdev_softc** %2, align 8
  %6 = getelementptr inbounds %struct.vmmdev_softc, %struct.vmmdev_softc* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @vm_get_maxcpus(i32 %7)
  store i32 %8, i32* %4, align 4
  store i32 0, i32* %3, align 4
  br label %9

9:                                                ; preds = %17, %1
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* %4, align 4
  %12 = icmp slt i32 %10, %11
  br i1 %12, label %13, label %20

13:                                               ; preds = %9
  %14 = load %struct.vmmdev_softc*, %struct.vmmdev_softc** %2, align 8
  %15 = load i32, i32* %3, align 4
  %16 = call i32 @vcpu_unlock_one(%struct.vmmdev_softc* %14, i32 %15)
  br label %17

17:                                               ; preds = %13
  %18 = load i32, i32* %3, align 4
  %19 = add nsw i32 %18, 1
  store i32 %19, i32* %3, align 4
  br label %9

20:                                               ; preds = %9
  ret void
}

declare dso_local i32 @vm_get_maxcpus(i32) #1

declare dso_local i32 @vcpu_unlock_one(%struct.vmmdev_softc*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
